<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_plc_bridge</name>
  <version>0.1.0</version>
  <description>Glue nodes that mirror /home/bakamake/Downloads/1.py inside ROS2:
PLC I128.0 rising edge -> SSH standup/standown on the Go2 host, plus optional
UDP trigger and joint-feedback forwarding.</description>
  <maintainer email="zhuoan@stu.pku.edu.cn">andy-desktop-ubuntu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <!-- Third-party Python deps; installed with pip3 in the target env. -->
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-snap7</exec_depend>
  <exec_depend>python3-paramiko</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
